# lapce

lapce-core/: Cargo.toml
lapce-core/src/: language.rs
lapce-core/src/syntax/: highlight.rs
lapce-proxy/: Cargo.toml
lapce-rpc/: Cargo.toml
lapce-ui/: Cargo.toml
