[package]
name = "lapce-rpc"
version = "0.2.0"
authors = ["Dongdong Zhou <dzhou121@gmail.com>"]
edition = "2021"

[dependencies]
log = { default-features = false, version = "0.4.17" }
parking_lot = "0.11.2"
anyhow = "1.0.34"
serde_json = { default-features = false, version = "1.0.59" }
serde = { default-features = false, version = "1.0" }
crossbeam-channel = "0.5.0"
lsp-types = { version = "0.93", features = ["proposed"] }
xi-rope = { git = "https://github.com/lapce/xi-editor", features = ["serde"] }
